--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <header class="header-container">
       <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
+          <a class="navbar-brand" href="#">The Bird Ambassador</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -42,13 +42,19 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
+                <a class="nav-link" href="#">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
+                <a class="nav-link" href="#">Citizen Science Program</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link disabled">Disabled</a>
+                <a class="nav-link" href="#">Bird Information Table</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Bird Walk</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">News & Updates</a>
               </li>
             </ul>
           </div>
@@ -59,7 +65,7 @@
     <!-------------->
     <!-- Carousel -->
     <!-------------->
-    <div class="carousel-container">
+    <div class="container carousel-container">
       <div
         id="carouselExampleIndicators"
         class="carousel slide"
@@ -90,21 +96,21 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img
-              src="https://i.imgur.com/AD3MbBi.jpeg"
+              src="https://www.allaboutbirds.org/guide/assets/photo/64809691-1280px.jpg"
               class="d-block w-100"
               alt="..."
             />
           </div>
           <div class="carousel-item">
             <img
-              src="https://i.imgur.com/Jvh1OQm.jpeg"
+              src="https://www.allaboutbirds.org/guide/assets/photo/64809671-1280px.jpg"
               class="d-block w-100"
               alt="..."
             />
           </div>
           <div class="carousel-item">
             <img
-              src="https://i.imgur.com/AD3MbBi.jpeg"
+              src="https://www.allaboutbirds.org/guide/assets/photo/64809631-1280px.jpg"
               class="d-block w-100"
               alt="..."
             />
