--- a/index.html
+++ b/index.html
@@ -244,16 +244,28 @@
         <div style="height: 300px; width: 400px; background-color: pink">
           <!-- Logos -->
           <div class="row justify-content-around py-2 my-2">
-            <a href="#" class="york-logo nav-link px-2 text-muted">
+            <!-- York University logo -->
+            <a href="#" class="york-logo text-muted">
               <img src="imgs/Logo_York_University.svg" alt="" />
             </a>
 
-            <a href="#" class="downsview-park-logo nav-link px-2 text-muted">
+            <!-- Downsview Park logo -->
+            <a href="#" class="downsview-park-logo text-muted">
               <img src="imgs/downsview_park_logo.svg" alt="" />
             </a>
           </div>
+
+          <!-- Instagram information -->
+          <div class="row">
+            <div class="text-center">
+              <a href="#" class="text-muted"
+                ><i class="fa-brands fa-instagram"></i> @thebirdambassador</a
+              >
+            </div>
+          </div>
         </div>
       </div>
+      <!-- Made by information in footer -->
       <div class="row justify-content-center py-3 my-4">
         <p class="text-center text-muted">
           Made with <i class="fa-solid fa-heart"></i> by
