--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body>
+  <body class="container-fluid">
     <!------------>
     <!-- Navbar -->
     <!------------>
@@ -51,19 +51,13 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="#">Schedule</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Citizen Science Program</a>
+                <a class="nav-link" href="#">Activities</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Bird Information Table</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Bird Walk</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">News & Updates</a>
+                <a class="nav-link" href="#">Updates</a>
               </li>
             </ul>
           </div>
@@ -208,6 +202,27 @@
       </div>
     </div>
 
+    <!-------------->
+    <!-- Schedule -->
+    <!-------------->
+    <div class="container">
+      <h3>Wednesdays from June 29 to September 28:</h3>
+      <p>4:15 to 5:15 pm - Citizen Science (Meet at 70 Canuck Ave)</p>
+      <p>
+        6:30 to 7:45 pm - Bird Information Table (Trail Entrance near 70 Canuck
+        Parking Lot)
+      </p>
+
+      <h3>Thursdays from June 30 to September 29:</h3>
+      <p>4:15 to 5:15 pm - Citizen Science (Meet at 70 Canuck Ave)</p>
+      <p>6:50 to 7:50 pm - Bird Walk (*Trail Entrance or Orchard Pavilion)</p>
+    </div>
+
+    <!---------------->
+    <!-- Activities -->
+    <!---------------->
+    <div class="container"></div>
+
     <!------------>
     <!-- Footer -->
     <!------------>
@@ -238,10 +253,62 @@
 
       <div class="row justify-content-around py-3 my-4">
         <!-- Contact Form -->
-        <div style="height: 300px; width: 400px; background-color: pink"></div>
+        <div style="height: 400px; width: 600px; background-color: pink">
+          <div class="container row justify-content-around py-2 my-2">
+            <form
+              method="post"
+              action="https://forms.un-static.com/forms/YOUR_ENDPOINT_REFERENCE"
+            >
+              <div class="form-group row">
+                <label for="inputName" class="col-sm-2 col-form-label"
+                  >Name</label
+                >
+                <div class="col-sm-10">
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="inputName"
+                    placeholder="Please enter your name"
+                  />
+                </div>
+              </div>
+              <div class="form-group row">
+                <label for="inputEmail" class="col-sm-2 col-form-label"
+                  >Email</label
+                >
+                <div class="col-sm-10">
+                  <input
+                    type="email"
+                    class="form-control"
+                    id="inputEmail"
+                    placeholder="Email"
+                  />
+                </div>
+              </div>
+              <div class="form-group row">
+                <label for="inputMessage" class="col-sm-2 col-form-label"
+                  >Message</label
+                >
+                <div class="col-sm-10">
+                  <textarea
+                    name="inputMessage"
+                    cols="40"
+                    rows="6"
+                    class="form-control"
+                  ></textarea>
+                </div>
+              </div>
+              <div class="form-group row">
+                <div class="col-sm-10">
+                  <button type="submit" class="btn btn-primary">Send</button>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
 
         <!-- Footer Information -->
-        <div style="height: 300px; width: 400px; background-color: pink">
+        <div style="height: 400px; width: 600px; background-color: pink">
           <!-- Logos -->
           <div class="row justify-content-around py-2 my-2">
             <!-- York University logo -->
