--- a/index.html
+++ b/index.html
@@ -221,36 +221,28 @@
     <!---------------->
     <!-- Activities -->
     <!---------------->
-    <div class="container"></div>
+    <div class="container">
+      <h3>Citizen Science</h3>
+      <p>
+        Join Milly (a graduate student from York University) as she searches for
+        Killdeer nests, bands Killdeer and checks up on banded Killdeer. To get
+        involved, meet Milly at 70 Canuck Ave between 4:00 and 6:15 pm on
+        Wednesdays and Thursdays. She’ll be in an orange t-shirt!
+      </p>
+      <h3>Information Table</h3>
+      <p>
+        Milly will have a bird information table set up Trail Entrance near 70
+        Canuck parking lot all throughout the summer. Community members are
+        encouraged to come and ask Milly all their birding questions!
+      </p>
+      <h3>Bird Walk</h3>
+      <p>A 60-minute bird-focused walk.</p>
+    </div>
 
     <!------------>
     <!-- Footer -->
     <!------------>
     <footer class="py-3 my-4">
-      <div class="row">
-        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-          <li class="nav-item">
-            <a href="#" class="nav-link px-2 text-muted"
-              ><i class="fa-brands fa-instagram"></i
-            ></a>
-          </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link px-2 text-muted">
-              <img src="imgs/downsview_park_logo.svg" alt="" />
-            </a>
-          </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link px-2 text-muted">Pricing</a>
-          </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link px-2 text-muted">FAQs</a>
-          </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link px-2 text-muted">About</a>
-          </li>
-        </ul>
-      </div>
-
       <div class="row justify-content-around py-3 my-4">
         <!-- Contact Form -->
         <div style="height: 400px; width: 600px; background-color: pink">
