Remove padding on body

--- a/index.html
+++ b/index.html
@@ -68,8 +68,15 @@
     <!-------------->
     <!-- Carousel -->
     <!-------------->
-    <div class="container carousel-container">
-      <div id="carouselIndicators" class="carousel slide" data-bs-ride="true">
+    <div
+      class="container carousel-container py-2 my-2"
+      style="background-color: #273b09"
+    >
+      <div
+        id="carouselIndicators"
+        class="carousel slide carousel-fade"
+        data-bs-ride="true"
+      >
         <!-- Carousel Indicators -->
         <div class="carousel-indicators">
           <button
