Adjust spacing and color palettes

--- a/index.html
+++ b/index.html
@@ -68,10 +68,7 @@
     <!-------------->
     <!-- Carousel -->
     <!-------------->
-    <div
-      class="container carousel-container py-2 my-2"
-      style="background-color: #273b09"
-    >
+    <div class="container carousel-container">
       <div
         id="carouselIndicators"
         class="carousel slide carousel-fade"
@@ -212,7 +209,7 @@
     <!-------------->
     <!-- Schedule -->
     <!-------------->
-    <div class="container">
+    <div class="container schedule">
       <h3>Wednesdays from June 29 to September 28:</h3>
       <p>4:15 to 5:15 pm - Citizen Science (Meet at 70 Canuck Ave)</p>
       <p>
@@ -228,7 +225,7 @@
     <!---------------->
     <!-- Activities -->
     <!---------------->
-    <div class="container">
+    <div class="container activities">
       <h3>Citizen Science</h3>
       <p>
         Join Milly (a graduate student from York University) as she searches for
@@ -250,7 +247,7 @@
     <!-- Footer -->
     <!------------>
     <footer class="py-3 my-4">
-      <div class="row justify-content-around py-3 my-4">
+      <div class="container d-flex justify-content-around">
         <!-- Contact Form -->
         <div style="height: 400px; width: 600px; background-color: pink">
           <div class="container row justify-content-around py-2 my-2">
@@ -332,7 +329,7 @@
         </div>
       </div>
       <!-- Made by information in footer -->
-      <div class="row justify-content-center py-3 my-4">
+      <div class="justify-content-center">
         <p class="text-center text-muted">
           Made with <i class="fa-solid fa-heart"></i> by
           <a class="made-by text-muted" href="https://github.com/tran-kenneth"
