Add flex wrapping to footer content

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
     <!-- Footer -->
     <!------------>
     <footer class="py-3 my-4">
-      <div class="container d-flex justify-content-around">
+      <div class="container d-flex flex-wrap justify-content-around">
         <!-- Contact Form -->
         <div style="height: 400px; width: 600px; background-color: pink">
           <div class="container row justify-content-around py-2 my-2">
