Add centered section titles

--- a/index.html
+++ b/index.html
@@ -210,14 +210,15 @@
     <!-- Schedule -->
     <!-------------->
     <div class="container schedule">
-      <h3>Wednesdays from June 29 to September 28:</h3>
+      <h2 class="text-center">Schedule</h2>
+      <h4>Wednesdays from June 29 to September 28:</h4>
       <p>4:15 to 5:15 pm - Citizen Science (Meet at 70 Canuck Ave)</p>
       <p>
         6:30 to 7:45 pm - Bird Information Table (Trail Entrance near 70 Canuck
         Parking Lot)
       </p>
 
-      <h3>Thursdays from June 30 to September 29:</h3>
+      <h4>Thursdays from June 30 to September 29:</h4>
       <p>4:15 to 5:15 pm - Citizen Science (Meet at 70 Canuck Ave)</p>
       <p>6:50 to 7:50 pm - Bird Walk (*Trail Entrance or Orchard Pavilion)</p>
     </div>
@@ -226,20 +227,21 @@
     <!-- Activities -->
     <!---------------->
     <div class="container activities">
-      <h3>Citizen Science</h3>
+      <h2 class="text-center">Activities</h2>
+      <h4>Citizen Science</h4>
       <p>
         Join Milly (a graduate student from York University) as she searches for
         Killdeer nests, bands Killdeer and checks up on banded Killdeer. To get
         involved, meet Milly at 70 Canuck Ave between 4:00 and 6:15 pm on
         Wednesdays and Thursdays. She’ll be in an orange t-shirt!
       </p>
-      <h3>Information Table</h3>
+      <h4>Information Table</h4>
       <p>
         Milly will have a bird information table set up Trail Entrance near 70
         Canuck parking lot all throughout the summer. Community members are
         encouraged to come and ask Milly all their birding questions!
       </p>
-      <h3>Bird Walk</h3>
+      <h4>Bird Walk</h4>
       <p>A 60-minute bird-focused walk.</p>
     </div>
 
