--- a/Pages/activities.html
+++ b/Pages/activities.html
@@ -33,7 +33,12 @@
     <header class="header-container">
       <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="../index.html">The Bird Ambassador</a>
+          <a class="navbar-brand" href="../index.html"
+            ><img
+              class="logo-img"
+              src="../imgs/bird_ambassador_logo.jpeg"
+              alt=""
+          /></a>
           <button
             class="navbar-toggler"
             type="button"
